force-app/main/default/objects/Privacy_Request__c/Privacy_Request__c.object-meta.xml
<CustomObject>
    <description>Represents a GDPR Right-to-Erasure or CCPA deletion request. Orchestrated by Privacy_Request_Handler_Flow and executed by PrivacyDeletionService.</description>
    <label>Privacy Request</label>
    <nameField>
        <displayFormat>PRQ-{0000000}</displayFormat>
        <label>Privacy Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Privacy Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>