force-app/main/default/objects/Privacy_Request__c/fields/Jurisdiction__c.field-meta.xml
<CustomField>
    <fullName>Jurisdiction__c</fullName>
    <label>Jurisdiction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>GDPR</fullName><default>false</default><label>GDPR (EU/EEA)</label></value>
            <value><fullName>CCPA</fullName><default>false</default><label>CCPA (California)</label></value>
            <value><fullName>PIPEDA</fullName><default>false</default><label>PIPEDA (Canada)</label></value>
            <value><fullName>Other</fullName><default>false</default><label>Other</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>