force-app/main/default/objects/Privacy_Request__c/fields/OneTrust_Request_Id__c.field-meta.xml
<CustomField>
    <fullName>OneTrust_Request_Id__c</fullName>
    <description>Request ID from OneTrust Data Subject Request webhook payload.</description>
    <externalId>true</externalId>
    <label>OneTrust Request ID</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>