force-app/main/default/objects/Privacy_Request__c/fields/Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Request_Type__c</fullName>
    <label>Request Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Erasure</fullName><default>true</default><label>Right to Erasure (GDPR Art. 17)</label></value>
            <value><fullName>CCPA_Delete</fullName><default>false</default><label>CCPA Deletion Request</label></value>
            <value><fullName>Access</fullName><default>false</default><label>Right of Access (GDPR Art. 15)</label></value>
            <value><fullName>Portability</fullName><default>false</default><label>Right to Data Portability (GDPR Art. 20)</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>